objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ALTF__Altify_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Altify Objective</label>
        <referenceTo>ALTF__Account_Objective__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Prime_Action_Type__c</fullName>
        <label>PRIME Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prove your value</fullName>
                </value>
                <value>
                    <fullName>Retrieve missing information</fullName>
                </value>
                <value>
                    <fullName>Insulate against competition</fullName>
                </value>
                <value>
                    <fullName>Minimize your weaknesses</fullName>
                </value>
                <value>
                    <fullName>Emphasize your strengths</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Call_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Back Later</fullName>
                </value>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Event_Address__c</fullName>
        <label>Event Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>L2O_Impact_Type__c</fullName>
        <label>Impact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Pipeline Acceleration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bizible2__BizibleId__c</fullName>
        <label>BizibleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Bizible_Touchpoint_Date__c</fullName>
        <description>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</description>
        <inlineHelpText>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Created Date will be used.</inlineHelpText>
        <label>Bizible Touchpoint Date</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>